infrastructure/security/vault-consul/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vault
  namespace: vault-system
  labels:
    traefik2: "true"
  annotations:
    kubernetes.io/ingress.class: cert
    #traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-dns01-provider: route53
    cert-manager.io/acme-challenge-type: dns01
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: keyvault.decort.tech
    http:
      paths:
      - path: /cert-placeholder
        backend:
          serviceName: vault-ui-service
          servicePort: 80
  tls:
  - hosts:
    - keyvault.decort.tech
    secretName: vault-cert  
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ui-route
  namespace: vault-system
spec:
  entryPoints:
    - websecure
    - vault
  routes:
    - match: Host(`keyvault.decort.tech`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: vault-service
          port: 8200
      middlewares:
        - name: vault-security
        #- name: traefik-auth
  tls:
    secretName: vault-cert
